--- a/resources/style.css
+++ b/resources/style.css
@@ -37,7 +37,7 @@ span {
 h1 {
   background-image: url(./images/pattern.jpeg);
   font-size: 100px;
-  color: khaki;
+  color: aliceblue;
   text-align: center;
   padding: 20px 0;
 }
